# task-4_makefile

./: CMakeLists.txt  Makefile  README.md  build.ninja  calculator.h  main.cpp  oleh_super_calculator.cpp  rules.ninja
